test/trivial/roxana/test_param_decl3.chpl
param x : int;
writeln(x);
